Сделал Footer с адаптивом

--- a/index.html
+++ b/index.html
@@ -659,6 +659,101 @@
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <div class="footer__body"> 
+        <div class="info">
+          <div class="container">
+            <div class="info__body">
+              <div class="info__item">
+                <div class="info__item-img">
+                  <img src="img/work-time.svg" alt="Рабочее время">
+                </div>
+                <span class="info__item-text">Режим работы 9.00 - 19.00</span>
+              </div>
+              <div class="info__item">
+                <div class="info__item-img">
+                  <img src="img/car-availability.svg" alt="Доступность авто">
+                </div>
+                <span class="info__item-text">Подача автомобиля 24/7 </span>
+              </div>
+              <div class="info__contacts">
+                <ul class="info__messengers">
+                  <li><a href="#"><img src="img/viber.svg" alt="Viber"></a></li>
+                  <li><a href="#"><img src="img/whatsapp.svg" alt="WhatsApp"></a></li>
+                  <li><a href="#"><img src="img/telegram.svg" alt="Telegram"></a></li>
+                </ul>
+                <a href="tel:+79788373757" class="info-phone">+7 (978) 837-37-57</a>
+              </div>
+              <button class="btn-outline btn-round info__callback">
+                <div class="info__callback-img">
+                  <img src="img/callback.svg" alt="Обратный звонок">
+                </div>
+                <span class="info__callback-text">Обратный звонок</span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="footer__menu">
+          <div class="container">
+            <div class="footer__menu__body">
+              <div class="footer__column footer__company">
+                <h2 class="footer__column-title">Компания</h2>
+                <ul class="footer__column__list">
+                  <li class="footer__column-item"><a href="#">Автопарк</a></li>
+                  <li class="footer__column-item"><a href="#">Цены</a></li>
+                  <li class="footer__column-item"><a href="#">Условия</a></li>
+                  <li class="footer__column-item"><a href="#">Контакты</a></li>
+                </ul>
+              </div>
+              <div class="footer__column footer__service">
+                <h2 class="footer__column-title">СЕРВИС</h2>
+                <ul class="footer__column__list">
+                  <li class="footer__column-item"><a href="#">Контроль качества</a></li>
+                  <li class="footer__column-item"><a href="#">Станции проката</a></li>
+                  <li class="footer__column-item"><a href="#">Обратный звонок</a></li>
+                  <li class="footer__column-item"><a href="#">Города подачи авто</a></li>
+                </ul>
+              </div>
+              <div class="footer__column footer__info">
+                <h2 class="footer__column-title">ИНФОРМАЦИЯ</h2>
+                <ul class="footer__column__list">
+                  <li class="footer__column-item"><a href="#">Как заказать</a></li>
+                  <li class="footer__column-item"><a href="#">Договор публичной оферты</a></li>
+                  <li class="footer__column-item"><a href="#">Условия пользования сайтом</a></li>
+                  <li class="footer__column-item"><a href="#">Отзывы</a></li>
+                </ul>
+              </div>
+              <div class="footer__column footer__contacts">
+                <h2 class="footer__column-title">Контакты</h2>
+                <ul class="footer__column__list">
+                  <li class="footer__column-item">
+                    <div class="footer__column-item-icon"><img src="img/phone.svg" alt="Телефон"></div>
+                    <a href="tel:+79788373757" class="footer__column-item-text">+7 (978) 837-37-57</a>
+                  </li>
+                  <li class="footer__column-item">
+                    <div class="footer__column-item-icon"><img src="img/map-mark.svg" alt="Адрес"></div>
+                    <span class="footer__column-item-text">г. Севастополь, пр-т <br> Генерала Острякова, д. 65А</span>
+                  </li>
+                  <li class="footer__column-item">
+                    <div class="footer__column-item-icon"><img src="img/email.svg" alt="Email"></div>
+                    <a href="mailto:info@grandauto82.ru" class="footer__column-item-text">info@grandauto82.ru</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer__more">
+          <div class="container">
+            <div class="footer__more__body">
+              <span class="footer-copyright">2021 © «Грандавто» <br> All rights maybe reserved</span>
+              <span class="footer-registered">ООО "Грандавто", регистрационный № ‎192369 зарегистрировано Минским горисполкомом 01.09.2017, регистрация в торговом реестре РФ от 12.09.2017 № 392173</span>
+              <span class="footer-work-time">Приём заказов осуществляется 24/7</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- Модальные окна -->
     <div class="modal modal-contacts" data-modal="contacts">
