Сделал модальное окно при клике на кнопку "Арендовать"

--- a/autopark.html
+++ b/autopark.html
@@ -64,10 +64,10 @@
                   </div>
                   <ul class="nav-menu__list">
                     <li><a href="../index.html">Главная</a></li>
-                    <li><a href="/autopark.html">Автопарк</a></li>
+                    <li><a href="/autopark.html" class="_active-page">Автопарк</a></li>
                     <li><a href="price.html">Цены</a></li>
                     <li><a href="price.html">Условия</a></li>
-                    <li><a href="contacts.html" class="_active-page">Контакты</a></li>
+                    <li><a href="contacts.html">Контакты</a></li>
                   </ul>
                   <div class="nav-menu__footer">
                     <div class="info__items">
@@ -100,105 +100,7 @@
         </div>
       </div>
     </header>
-    <section class="contacts">
-      <div class="container">
-        <div class="contacts__body">
-          <div class="breadcrumbs contacts-breadcrumbs">
-            <ul class="breadcrumbs__list">
-              <li><a href="#">Главная \</a></li>
-            </ul>
-          </div>
-          <h1 class="contacts-title">Контакты</h1>
-          <div class="contacts__content">
-            <ul class="modal-contact__list contacts-contact__list">
-              <li class="modal-contact__item">
-                <a href="#" class="modal-contact-link">
-                  <div class="modal-contact-img"><img src="img/phone.svg" alt="Телефон"></div>
-                  <div class="modal-contact-text">
-                    <span class="modal-contact-title">+7 (978) 837-37-57</span>
-                    <span class="modal-contact-label">Ежедневно с 9.00 до 19.00</span>
-                  </div>
-                </a>
-              </li>
-              <li class="modal-contact__item">
-                <a href="#" class="modal-contact-link">
-                  <div class="modal-contact-img"><img src="img/viber.svg" alt="Viber"></div>
-                  <div class="modal-contact-text">
-                    <span class="modal-contact-title">Viber</span>
-                    <span class="modal-contact-label">Онлайн-консультант</span>
-                  </div>
-                </a>
-              </li>
-              <li class="modal-contact__item">
-                <a href="#" class="modal-contact-link">
-                  <div class="modal-contact-img"><img src="img/whatsapp.svg" alt="Whatsapp"></div>
-                  <div class="modal-contact-text">
-                    <span class="modal-contact-title">Whatsapp</span>
-                    <span class="modal-contact-label">Отправить сообщение</span>
-                  </div>
-                </a>
-              </li>
-              <li class="modal-contact__item">
-                <a href="#" class="modal-contact-link">
-                  <div class="modal-contact-img"><img src="img/telegram.svg" alt="Telegram"></div>
-                  <div class="modal-contact-text">
-                    <span class="modal-contact-title">Telegram</span>
-                    <span class="modal-contact-label">Отправить сообщение</span>
-                  </div>
-                </a>
-              </li>
-              <li class="modal-contact__item contacts-contact__item">
-                <div class="modal-contact-link">
-                  <div class="modal-contact-img"><img src="img/map-mark.svg" alt="Адрес"></div>
-                  <div class="modal-contact-text">
-                    <span class="modal-contact-text">г. Севастополь, пр-т Генерала Острякова, д. 65А</span>
-                  </div>
-                </div>
-              </li>
-              <li class="modal-contact__item contacts-contact__item">
-                <div class="modal-contact-link">
-                  <div class="modal-contact-img"><img src="img/email.svg" alt="Email"></div>
-                  <div class="modal-contact-text">
-                    <span class="modal-contact-text">info@grandauto82.ru</span>
-                  </div>
-                </div>
-              </li>
-            </ul>
-            <div class="contacts__form">
-              <h2 class="contacts__form-title">Обратная связь</h2>
-              <form action="#">
-                <div class="modal-callback__inputs">
-                  <div class="modal__input">
-                    <input name="modal-callback-name" type="text" class="input" required>
-                    <label for="modal-callback-name" class="input-label">Имя</label>
-                  </div>
-                  <div class="modal__input">
-                    <input name="modal-callback-name" type="phone" class="input" required>
-                    <label for="modal-callback-name" class="input-label">Номер</label>
-                  </div>
-                </div>
-                <div class="modal__input contacts-textarea">
-                  <textarea name="modal-callback-name" class="input"></textarea>
-                  <label for="modal-callback-name" class="input-label">Сообщение</label>
-                </div>
-                <div class="modal-callback__checkbox">
-                  <input name="modal-callback__checkbox-input" type="checkbox" checked required>
-                  <label for="modal-callback__checkbox-input">Я ознакомлен(-а) с <a href="#"> Политикой конфиденциальности</a></label>
-                </div>
-                <button type="submit" class="btn btn-round modal-callback-btn">Отправить</button>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="map">
-        <div class="container">
-          <div class="map__body">
-            <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A052cd0b9a9dac8ed09170316ee00f9c4340ba5e689f850b6b3baf9d20a445010&amp;source=constructor" width="100%" height="468" frameborder="0" scroll="false"></iframe>
-          </div>
-        </div>
-      </div>
-    </section>
+
     <footer class="footer">
       <div class="footer__body"> 
         <div class="info">
