перенос данных в модальное окно на главном экране

--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
               </div>
             </div>
             <div class="main__price">
-              <span class="main__price-all">17 500 ₽</span>
+              <span class="main__price-all"><span>17 500</span> ₽</span>
               <div class="main__price__correction">
-                <span class="main__price-day">3 500 ₽ / сутки</span>
-                <span class="main__price-deposit">Залог: 20 000 ₽ </span>
+                <span class="main__price-day"><span>3 500</span> ₽ / сутки</span>
+                <span class="main__price-deposit">Залог: <span>20 000</span> ₽ </span>
               </div>
             </div>
             <button class="btn btn-round main-btn modal-open" data-modal-open="rent">Арендовать</button>
@@ -446,7 +446,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="park__car-item _show" data-park-car="budget">
+                <li class="park__car-item" data-park-car="budget">
                   <div class="park__car__header">
                     <div class="park__car__character park__car__people">
                       <div class="park__car__character-icon"><img src="img/car-people.svg" alt="Кол-во мест"></div>
@@ -486,7 +486,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="park__car-item _show" data-park-car="budget">
+                <li class="park__car-item" data-park-car="budget">
                   <div class="park__car__header">
                     <div class="park__car__character park__car__people">
                       <div class="park__car__character-icon"><img src="img/car-people.svg" alt="Кол-во мест"></div>
@@ -526,7 +526,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="park__car-item _show" data-park-car="comfort">
+                <li class="park__car-item" data-park-car="comfort">
                   <div class="park__car__header">
                     <div class="park__car__character park__car__people">
                       <div class="park__car__character-icon"><img src="img/car-people.svg" alt="Кол-во мест"></div>
@@ -566,7 +566,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="park__car-item _show" data-park-car="comfort">
+                <li class="park__car-item" data-park-car="comfort">
                   <div class="park__car__header">
                     <div class="park__car__character park__car__people">
                       <div class="park__car__character-icon"><img src="img/car-people.svg" alt="Кол-во мест"></div>
@@ -606,7 +606,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="park__car-item _show" data-park-car="business">
+                <li class="park__car-item" data-park-car="business">
                   <div class="park__car__header">
                     <div class="park__car__character park__car__people">
                       <div class="park__car__character-icon"><img src="img/car-people.svg" alt="Кол-во мест"></div>
@@ -646,7 +646,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="park__car-item _show" data-park-car="business">
+                <li class="park__car-item" data-park-car="business">
                   <div class="park__car__header">
                     <div class="park__car__character park__car__people">
                       <div class="park__car__character-icon"><img src="img/car-people.svg" alt="Кол-во мест"></div>
@@ -688,7 +688,7 @@
                 </li>
               </ul>
               <div class="park-more">
-                <a href="#" class="btn-outline btn-round park-more-link">Все автомобили</a>
+                <a href="autopark.html" class="btn-outline btn-round park-more-link">Все автомобили</a>
               </div>
             </div>
           </div>
@@ -1115,19 +1115,19 @@
           </div>
           <div class="modal-rent-info">
             <div class="modal-rent-info__body">
-              <h2 class="modal-rent-info-title">VW TIGUAN 2.0 4x4</h2>
+              <h2 class="modal-rent-info-title"></h2>
               <ul class="modal-rent-info__list">
                 <div class="modal-rent-info__item">
                   <div class="modal-rent-info__item-icon"><img src="img/rent-calendar.svg" alt="Календарь"></div>
-                  <span class="modal-rent-info__item-text">5 суток</span>
+                  <span class="modal-rent-info__item-text modal-rent-info-day"><span></span> суток</span>
                 </div>
                 <div class="modal-rent-info__item">
                   <div class="modal-rent-info__item-icon"><img src="img/rent-wallet.svg" alt="Кошелек"></div>
-                  <span class="modal-rent-info__item-text">3 500 ₽ / сутки</span>
+                  <span class="modal-rent-info__item-text modal-rent-info-price-day"><span></span> ₽ / сутки</span>
                 </div>
                 <div class="modal-rent-info__item">
                   <div class="modal-rent-info__item-icon"><img src="img/renta-deposit.svg" alt="Залог"></div>
-                  <span class="modal-rent-info__item-text">Залог: 20 000 ₽ </span>
+                  <span class="modal-rent-info__item-text modal-rent-info-deposit">Залог: <span></span> ₽ </span>
                 </div>
               </ul>
             </div>
@@ -1198,7 +1198,7 @@
                   <label for="modal-callback__checkbox-input">Я ознакомлен(-а) с <a href="#"> Политикой конфиденциальности</a></label>
                 </div>
                 <div class="modal-rent__footer">
-                  <span class="modal-rent-price">70 500 ₽</span>
+                  <span class="modal-rent-price modal-rent-info-price"><span></span> ₽</span>
                   <button type="submit" class="btn btn-round modal-rent-btn">Отправить</button>
                 </div>
               </form>
